// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`refactrctl remove credential throws on missing --project-id option 1`] = `
"refactrctl remove credential <credential-id>

Delete a runner

Positionals:
  credential-id  [string] [required]

Options:
      --version     Show version number  [boolean]
  -v, --verbose     Print detailed output  [boolean]
      --format      Specifies output format  [choices: \\"wide\\", \\"json\\", \\"yaml\\"] [default: \\"wide\\"]
      --address     Address of the Refactr API server. This can also be specified via the REFACTR_ADDRESS environment variable. Defaults to https://api.refactr.it/v1  [string]
      --auth-token  Authentication token. This can also be specified via the REFACTR_AUTH_TOKEN environment variable  [string]
      --help        Show help  [boolean]
      --project-id  ID of the project containing the credential  [string] [required]

Missing required argument: project-id
"
`;

exports[`refactrctl remove credential throws on missing arguments 1`] = `
"refactrctl remove credential <credential-id>

Delete a runner

Positionals:
  credential-id  [string] [required]

Options:
      --version     Show version number  [boolean]
  -v, --verbose     Print detailed output  [boolean]
      --format      Specifies output format  [choices: \\"wide\\", \\"json\\", \\"yaml\\"] [default: \\"wide\\"]
      --address     Address of the Refactr API server. This can also be specified via the REFACTR_ADDRESS environment variable. Defaults to https://api.refactr.it/v1  [string]
      --auth-token  Authentication token. This can also be specified via the REFACTR_AUTH_TOKEN environment variable  [string]
      --help        Show help  [boolean]
      --project-id  ID of the project containing the credential  [string] [required]

Not enough non-option arguments: got 0, need at least 1
"
`;

exports[`refactrctl remove job throws on missing --project-id option 1`] = `
"refactrctl remove job <job-id>

Delete a job

Positionals:
  job  [string]

Options:
      --version     Show version number  [boolean]
  -v, --verbose     Print detailed output  [boolean]
      --format      Specifies output format  [choices: \\"wide\\", \\"json\\", \\"yaml\\"] [default: \\"wide\\"]
      --address     Address of the Refactr API server. This can also be specified via the REFACTR_ADDRESS environment variable. Defaults to https://api.refactr.it/v1  [string]
      --auth-token  Authentication token. This can also be specified via the REFACTR_AUTH_TOKEN environment variable  [string]
      --help        Show help  [boolean]
      --project-id  ID of the project containing the job  [string] [required]

Missing required argument: project-id
"
`;

exports[`refactrctl remove job throws on missing arguments 1`] = `
"refactrctl remove job <job-id>

Delete a job

Positionals:
  job  [string]

Options:
      --version     Show version number  [boolean]
  -v, --verbose     Print detailed output  [boolean]
      --format      Specifies output format  [choices: \\"wide\\", \\"json\\", \\"yaml\\"] [default: \\"wide\\"]
      --address     Address of the Refactr API server. This can also be specified via the REFACTR_ADDRESS environment variable. Defaults to https://api.refactr.it/v1  [string]
      --auth-token  Authentication token. This can also be specified via the REFACTR_AUTH_TOKEN environment variable  [string]
      --help        Show help  [boolean]
      --project-id  ID of the project containing the job  [string] [required]

Not enough non-option arguments: got 0, need at least 1
"
`;

exports[`refactrctl remove pipeline throws on missing arguments 1`] = `
"refactrctl remove pipeline <pipeline-id>

Delete a pipeline

Positionals:
  pipeline-id  ID pipeline to delete  [string] [required]

Options:
      --version     Show version number  [boolean]
  -v, --verbose     Print detailed output  [boolean]
      --format      Specifies output format  [choices: \\"wide\\", \\"json\\", \\"yaml\\"] [default: \\"wide\\"]
      --address     Address of the Refactr API server. This can also be specified via the REFACTR_ADDRESS environment variable. Defaults to https://api.refactr.it/v1  [string]
      --auth-token  Authentication token. This can also be specified via the REFACTR_AUTH_TOKEN environment variable  [string]
      --help        Show help  [boolean]
      --project-id  ID of the project containing the pipeline  [string] [required]

Not enough non-option arguments: got 0, need at least 1
"
`;

exports[`refactrctl remove project throws on missing arguments 1`] = `
"refactrctl remove project <project-id>

Delete a project

Positionals:
  project-id  ID of the project  [string] [required]

Options:
      --version     Show version number  [boolean]
  -v, --verbose     Print detailed output  [boolean]
      --format      Specifies output format  [choices: \\"wide\\", \\"json\\", \\"yaml\\"] [default: \\"wide\\"]
      --address     Address of the Refactr API server. This can also be specified via the REFACTR_ADDRESS environment variable. Defaults to https://api.refactr.it/v1  [string]
      --auth-token  Authentication token. This can also be specified via the REFACTR_AUTH_TOKEN environment variable  [string]
      --help        Show help  [boolean]

Not enough non-option arguments: got 0, need at least 1
"
`;

exports[`refactrctl remove runner throws on missing arguments 1`] = `
"refactrctl remove runner <runner-id>

Delete a runner

Positionals:
  runner-id  [string] [required]

Options:
      --version          Show version number  [boolean]
  -v, --verbose          Print detailed output  [boolean]
      --format           Specifies output format  [choices: \\"wide\\", \\"json\\", \\"yaml\\"] [default: \\"wide\\"]
      --address          Address of the Refactr API server. This can also be specified via the REFACTR_ADDRESS environment variable. Defaults to https://api.refactr.it/v1  [string]
      --auth-token       Authentication token. This can also be specified via the REFACTR_AUTH_TOKEN environment variable  [string]
      --help             Show help  [boolean]
      --organization-id  ID of the organization containing the runner  [string] [required]

Not enough non-option arguments: got 0, need at least 1
"
`;

exports[`refactrctl remove runner throws on missing organization-id option 1`] = `
"refactrctl remove runner <runner-id>

Delete a runner

Positionals:
  runner-id  [string] [required]

Options:
      --version          Show version number  [boolean]
  -v, --verbose          Print detailed output  [boolean]
      --format           Specifies output format  [choices: \\"wide\\", \\"json\\", \\"yaml\\"] [default: \\"wide\\"]
      --address          Address of the Refactr API server. This can also be specified via the REFACTR_ADDRESS environment variable. Defaults to https://api.refactr.it/v1  [string]
      --auth-token       Authentication token. This can also be specified via the REFACTR_AUTH_TOKEN environment variable  [string]
      --help             Show help  [boolean]
      --organization-id  ID of the organization containing the runner  [string] [required]

Missing required argument: organization-id
"
`;

exports[`refactrctl remove throws on missing subcommand 1`] = `
"refactrctl remove

Commands:
  refactrctl remove pipeline <pipeline-id>      Delete a pipeline
  refactrctl remove job <job-id>                Delete a job
  refactrctl remove project <project-id>        Delete a project
  refactrctl remove runner <runner-id>          Delete a runner
  refactrctl remove credential <credential-id>  Delete a runner

Options:
      --version     Show version number  [boolean]
  -v, --verbose     Print detailed output  [boolean]
      --format      Specifies output format  [choices: \\"wide\\", \\"json\\", \\"yaml\\"] [default: \\"wide\\"]
      --address     Address of the Refactr API server. This can also be specified via the REFACTR_ADDRESS environment variable. Defaults to https://api.refactr.it/v1  [string]
      --auth-token  Authentication token. This can also be specified via the REFACTR_AUTH_TOKEN environment variable  [string]
      --help        Show help  [boolean]

Command must be specified.
"
`;
